# homepage

./: .gitignore  .mise.toml  CLAUDE.md  LIGHTHOUSE_PLAN.md  README.md  build.sh  flake.nix  hugo.toml
.cursor/rules/: general.mdc
.github/workflows/: hugo.yml
content/: _index.md  about.md  imprint.md  privacy.md
content-org/: all-pages.org
content/about/: index.md
content/de/: _index.md  about.md  privacy.md
content/de/posts/: _index.md
content/posts/: emacs-file-link-preview.md  hello-world.md  magic-wormhole.md  rust-static-site.md
docs/: CONTENT.md  CSS.md  THEME.md
i18n/: de.toml  en.toml
public/: 404.html  index.html  index.xml  sitemap.xml
public/categories/: index.html  index.xml
public/categories/category1/: index.html  index.xml
public/de/: 404.html  index.html  index.xml  sitemap.xml
public/de/categories/: index.html  index.xml
public/de/page/1/: index.html
public/de/tags/: index.html  index.xml
public/en/: sitemap.xml
public/page/1/: index.html
public/posts/: index.html  index.xml
public/posts/hello-world/: index.html
public/posts/my-first-post/: index.html
public/posts/page/1/: index.html
public/tags/: index.html  index.xml
public/tags/personal/: index.html  index.xml
public/tags/tag1/: index.html  index.xml
scripts/: convert-gemini-content.sh  gemini-writer.lua  lighthouse-audit.sh
server/: .mise.toml  BENCHMARKS.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  SECURITY_HARDENING.md  build.rs  config-digitalocean.json  config-hetzner.json  config.json  deploy-hetzner.sh  deploy-vps.sh  docker-compose.yml  get-dns-info.sh  homepage.service  nginx.conf  test-local-https.sh
server/src/: acme.rs  cert_storage.rs  config.rs  gemini.rs  main.rs  metrics.rs  router.rs  s3_storage.rs  websocket.rs
themes/poison/assets/css/: header.css  hyde.css  poison.css
themes/poison/layouts/_default/: baseof.html
themes/poison/layouts/partials/head/: head.html
themes/poison/layouts/partials/post/: comments.html
themes/poison/layouts/partials/sidebar/: sidebar.html
themes/wizard/assets/css/: header.css  memory-game.css  metrics-dashboard.css  phosphor.css  style.css
themes/wizard/assets/js/: light_dark.js  memory-game.js  metrics-dashboard.js  pixel-scale.js
themes/wizard/layouts/: index.gmi  index.html
themes/wizard/layouts/_default/: baseof.html  list.gmi  list.html  rss.xml  single.gmi  single.html
themes/wizard/layouts/partials/: footer.html  light_dark.html  navigation.html
themes/wizard/layouts/partials/head/: head.html
themes/wizard/layouts/partials/post/: info.html  meta.html
themes/wizard/layouts/partials/sidebar/: socials.html  title.html
themes/wizard/poison/: README.md
themes/wizard/poison/assets/css/: config.css  header.css  hyde.css  poison.css  poole.css  tabs.css
themes/wizard/poison/assets/js/: light_dark.js
themes/wizard/poison/layouts/_default/: single.html
themes/wizard/poison/layouts/partials/head/: head.html
themes/wizard/poison/layouts/partials/sidebar/: copyright.html
themes/wizard/poison/layouts/shortcodes/: mermaid.html
themes/wizard/poison/static/css/: wizard-custom.css
