[package]
name = "static-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["server", "http2", "tcp", "http1"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "time"] }
lazy_static = "1.4"
mimalloc = { version = "0.1", default-features = false }
tokio-tungstenite = "0.20"
futures-util = "0.3"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
base64 = "0.21"
# Pin url to avoid icu deps requiring Rust 1.83
url = "=2.5.2"

[build-dependencies]
mime_guess = "2.0"
flate2 = "1.0"
brotli = "3.3"
sha2 = "0.10"
walkdir = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
