[package]
name = "static-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["server", "http2", "tcp", "http1"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "time"] }
lazy_static = "1.4"
mimalloc = { version = "0.1", default-features = false }
tokio-tungstenite = "0.20"
futures-util = "0.3"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
base64 = "0.21"
# Pin url to avoid icu deps requiring Rust 1.83
url = "=2.5.2"
# HTTPS and Let's Encrypt support
instant-acme = "0.7"
hyper-rustls = "0.22"
rustls = { version = "0.19", features = ["dangerous_configuration"] }
rustls-pemfile = "0.2"
tokio-rustls = "0.22"
rcgen = "0.11"
aws-lc-rs = "1"
# rustls 0.23 for AWS SDK crypto provider (separate from our 0.19 usage)
rustls23 = { package = "rustls", version = "0.23" }
# S3 storage for certificate persistence
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
x509-parser = "0.15"
# Pin base64ct to avoid edition2024 requirement
base64ct = "=1.6.0"

[build-dependencies]
mime_guess = "2.0"
flate2 = "1.0"
brotli = "3.3"
sha2 = "0.10"
walkdir = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
# TEMPORARILY disabled for debugging - re-enable once stable
strip = false
# TEMPORARILY set to "unwind" for debugging - change back to "abort" once stable
panic = "unwind"
